# app/patent/models/sys_list.go
@@ -5,8 +5,7 @@ import (
 )
 
 type SysList struct {
-	models.Model
-	Id       int    `json:"Id" gorm:"comment:编码" `
+	//models.Model        //就是自增id
 	PatentId int    `json:"PatentId" gorm:"size:128;primaryKey;autoIncrement;comment:专利ID(主键)"`
 	TI       string `json:"TI" gorm:"size:128;comment:专利名"`
 	PNM      string `json:"PNM" gorm:"size:128;comment:申请号"`
@@ -17,6 +16,7 @@ type SysList struct {
 	AR       string `json:"AR" gorm:"size:128;comment:地址"`
 	INN      string `json:"INN" gorm:"size:128;comment:申请人"`
 	models.ControlBy
+	//嵌入结构体：先写好models然后嵌入，等效于models本体
 }
 
 func (SysList) TableName() string {
@@ -29,5 +29,5 @@ func (e *SysList) Generate() models.ActiveRecord {
 }
 
 func (e *SysList) GetId() interface{} {
-	return e.Id
+	return e.PatentId
 }
