# docs/swagger.json
@@ -88,6 +88,125 @@
                 }
             }
         },
+        "/api/v1/patent-list/change_a_patent/": {
+            "put": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "在post的json数组必须要有主键PatentId值（默认0不可重复），其他需要修改什么输入什么",
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "专利表"
+                ],
+                "summary": "修改专利表数据",
+                "parameters": [
+                    {
+                        "description": "body",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.SysListUpdateReq"
+                        }
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/api/v1/patent-list/delete_a_patent_by_id/{patent_id}": {
+            "delete": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "输入专利id删除专利表",
+                "tags": [
+                    "专利表"
+                ],
+                "summary": "输入专利id删除专利表",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "专利ID",
+                        "name": "PatentId",
+                        "in": "query"
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/api/v1/patent-list/get_by_patent_id/{patent_id}": {
+            "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "获取JSON,希望可以通过以下参数高级搜索，暂时只支持patentId",
+                "tags": [
+                    "专利表"
+                ],
+                "summary": "通过专利id获取单个对象",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "专利ID",
+                        "name": "PatentId",
+                        "in": "query"
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/api/v1/patent-list/get_patent_lists": {
+            "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "获取JSON",
+                "tags": [
+                    "专利表"
+                ],
+                "summary": "列表专利信息数据",
+                "responses": {}
+            }
+        },
+        "/api/v1/patent-list/post_a_patent/": {
+            "post": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "不是必须要有主键PatentId值（自增），其他需要修改什么输入什么",
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "专利表"
+                ],
+                "summary": "创建专利",
+                "parameters": [
+                    {
+                        "description": "专利表数据",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.SysListInsertReq"
+                        }
+                    }
+                ],
+                "responses": {}
+            }
+        },
         "/api/v1/public/uploadFile": {
             "post": {
                 "security": [
@@ -315,172 +434,6 @@
                     "系统信息"
                 ],
                 "summary": "系统信息",
-                "responses": {}
-            }
-        },
-        "/api/v1/sys-list": {
-            "get": {
-                "security": [
-                    {
-                        "Bearer": []
-                    }
-                ],
-                "description": "获取JSON",
-                "tags": [
-                    "专利表"
-                ],
-                "summary": "列表专利信息数据",
-                "responses": {}
-            },
-            "post": {
-                "security": [
-                    {
-                        "Bearer": []
-                    }
-                ],
-                "description": "获取JSON",
-                "consumes": [
-                    "application/json"
-                ],
-                "tags": [
-                    "专利表"
-                ],
-                "summary": "创建专利",
-                "parameters": [
-                    {
-                        "description": "专利表数据",
-                        "name": "data",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/dto.SysListInsertReq"
-                        }
-                    }
-                ],
-                "responses": {}
-            },
-            "delete": {
-                "security": [
-                    {
-                        "Bearer": []
-                    }
-                ],
-                "description": "专利删除",
-                "tags": [
-                    "专利表"
-                ],
-                "summary": "输入id删除专利表",
-                "parameters": [
-                    {
-                        "description": "body",
-                        "name": "data",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/dto.SysListDeleteReq"
-                        }
-                    }
-                ],
-                "responses": {}
-            }
-        },
-        "/api/v1/sys-list/": {
-            "put": {
-                "security": [
-                    {
-                        "Bearer": []
-                    }
-                ],
-                "description": "修改JSON",
-                "consumes": [
-                    "application/json"
-                ],
-                "tags": [
-                    "专利表"
-                ],
-                "summary": "修改专利表数据",
-                "parameters": [
-                    {
-                        "description": "body",
-                        "name": "data",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/dto.SysListUpdateReq"
-                        }
-                    }
-                ],
-                "responses": {}
-            }
-        },
-        "/api/v1/sys-list/patentid/{patent_id}": {
-            "get": {
-                "security": [
-                    {
-                        "Bearer": []
-                    }
-                ],
-                "description": "获取JSON",
-                "tags": [
-                    "专利表"
-                ],
-                "summary": "通过专利id获取单个对象",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "专利ID",
-                        "name": "PatentId",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "专利名",
-                        "name": "TI",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "申请号",
-                        "name": "PNM",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "申请日",
-                        "name": "AD",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "公开日",
-                        "name": "PD",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "简介",
-                        "name": "CL",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "申请单位",
-                        "name": "PA",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "地址",
-                        "name": "AR",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "申请人",
-                        "name": "INN",
-                        "in": "query"
-                    }
-                ],
                 "responses": {}
             }
         },
@@ -916,17 +869,6 @@
                 "userId": {
                     "description": "用户ID",
                     "type": "integer"
-                }
-            }
-        },
-        "dto.SysListDeleteReq": {
-            "type": "object",
-            "properties": {
-                "patent_ids": {
-                    "type": "array",
-                    "items": {
-                        "type": "integer"
-                    }
                 }
             }
         },
